// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructShape should group data by name and omit name 1`] = `
Object {
  "gatsby-starter-minimal-blog": Array [
    Object {
      "datetime": "2020-07-17",
      "forks": 154,
      "stars": 517,
      "url": "https://github.com/LekoArts/gatsby-starter-minimal-blog",
    },
    Object {
      "datetime": "2020-07-18",
      "forks": 153,
      "stars": 517,
      "url": "https://github.com/LekoArts/gatsby-starter-minimal-blog",
    },
  ],
  "gatsby-starter-portfolio-bella": Array [
    Object {
      "datetime": "2020-07-17",
      "forks": 19,
      "stars": 113,
      "url": "https://github.com/LekoArts/gatsby-starter-portfolio-bella",
    },
    Object {
      "datetime": "2020-07-18",
      "forks": 18,
      "stars": 113,
      "url": "https://github.com/LekoArts/gatsby-starter-portfolio-bella",
    },
  ],
  "gatsby-themes": Array [
    Object {
      "datetime": "2020-07-17",
      "forks": 243,
      "stars": 745,
      "url": "https://github.com/LekoArts/gatsby-themes",
    },
    Object {
      "datetime": "2020-07-18",
      "forks": 245,
      "stars": 749,
      "url": "https://github.com/LekoArts/gatsby-themes",
    },
  ],
}
`;

exports[`flatten should create new object shape 1`] = `
Array [
  Object {
    "datetime": "2020-07-17",
    "forks": 243,
    "name": "gatsby-themes",
    "stars": 745,
    "url": "https://github.com/LekoArts/gatsby-themes",
  },
  Object {
    "datetime": "2020-07-17",
    "forks": 154,
    "name": "gatsby-starter-minimal-blog",
    "stars": 517,
    "url": "https://github.com/LekoArts/gatsby-starter-minimal-blog",
  },
  Object {
    "datetime": "2020-07-17",
    "forks": 19,
    "name": "gatsby-starter-portfolio-bella",
    "stars": 113,
    "url": "https://github.com/LekoArts/gatsby-starter-portfolio-bella",
  },
  Object {
    "datetime": "2020-07-18",
    "forks": 245,
    "name": "gatsby-themes",
    "stars": 749,
    "url": "https://github.com/LekoArts/gatsby-themes",
  },
  Object {
    "datetime": "2020-07-18",
    "forks": 153,
    "name": "gatsby-starter-minimal-blog",
    "stars": 517,
    "url": "https://github.com/LekoArts/gatsby-starter-minimal-blog",
  },
  Object {
    "datetime": "2020-07-18",
    "forks": 18,
    "name": "gatsby-starter-portfolio-bella",
    "stars": 113,
    "url": "https://github.com/LekoArts/gatsby-starter-portfolio-bella",
  },
]
`;

exports[`nivoGithubFormatter should output correct shape via input 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "x": "2020-07-17",
        "y": 113,
      },
      Object {
        "x": "2020-07-18",
        "y": 113,
      },
    ],
    "id": "gatsby-starter-portfolio-bella",
  },
  Object {
    "data": Array [
      Object {
        "x": "2020-07-17",
        "y": 517,
      },
      Object {
        "x": "2020-07-18",
        "y": 517,
      },
    ],
    "id": "gatsby-starter-minimal-blog",
  },
  Object {
    "data": Array [
      Object {
        "x": "2020-07-17",
        "y": 745,
      },
      Object {
        "x": "2020-07-18",
        "y": 749,
      },
    ],
    "id": "gatsby-themes",
  },
]
`;

exports[`nivoTwitterFormatter should output correct shape via input 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "x": "2020-07-16",
        "y": 1126,
      },
      Object {
        "x": "2020-07-17",
        "y": 1137,
      },
      Object {
        "x": "2020-07-18",
        "y": 1150,
      },
    ],
    "id": "followers",
  },
]
`;
